--- a/notes_app/templates/register.html
+++ b/notes_app/templates/register.html
@@ -49,7 +49,7 @@
         
         <div class="form-group">
             <label for="password2" class="form-label">Confirm Password</label>
-            <input type="password" id="password2" name="password2" class="form-input">
+            <input type="password" id="password2" name="cnf_password" class="form-input">
             <span class="error-message" id="password2-error">
                 {% if form.password2.errors %}
                     {{ form.password2.errors.0 }}
@@ -84,7 +84,7 @@
         // Regular expressions for validation
         const usernameRegex = /^[a-zA-Z0-9_]{3,20}$/;
         const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-        const passwordRegex = /^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d@$!%*#?&]{8,}$/;
+        const passwordRegex = /^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d@$!%*#?&]{6,}$/;
         
         // Function to show error
         function showError(input, errorElement, message) {
@@ -139,7 +139,7 @@
             }
             
             if (!passwordRegex.test(passwordInput.value)) {
-                return showError(passwordInput, passwordError, 'Password must be at least 8 characters and include at least one letter and one number.');
+                return showError(passwordInput, passwordError, 'Password must be at least 6 characters and include at least one letter and one number.');
             }
             
             return true;
